# api-with-rust-and-docker

./: .env.template  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
