[package]
name = "api-with-rust-and-docker"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Morales <daniel85mg@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
chrono = "0.4.24"

